[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/asteroids/asteroid.tscn" type="PackedScene" id=1]
[ext_resource path="res://spawners/StarSpawner.gd" type="Script" id=2]
[ext_resource path="res://assets/Star.tscn" type="PackedScene" id=3]
[ext_resource path="res://spawners/AsteroidSpawner.gd" type="Script" id=4]
[ext_resource path="res://spawners/PlanetSpawner.gd" type="Script" id=5]
[ext_resource path="res://assets/planets/mud-planet.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/planets/water-planet.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/spaceships/spaceship-1.tscn" type="PackedScene" id=8]
[ext_resource path="res://spawners/EnemySpawner.gd" type="Script" id=9]
[ext_resource path="res://assets/enemies/fillen-fighter.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/font/EdgeOfTheGalaxyRegular-OVEa6.otf" type="DynamicFontData" id=11]
[ext_resource path="res://play-score.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="PlayScene" type="Node2D"]
script = ExtResource( 12 )
speed_up = 0.01

[node name="AsteroidSpawner" type="Node2D" parent="."]
script = ExtResource( 4 )
asteroid = ExtResource( 1 )

[node name="Timer" type="Timer" parent="AsteroidSpawner"]
wait_time = 3.0
autostart = true

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource( 9 )
enemy = ExtResource( 10 )

[node name="Timer" type="Timer" parent="EnemySpawner"]
wait_time = 15.0
autostart = true

[node name="PlanetSpawner" type="Node2D" parent="."]
script = ExtResource( 5 )
planets = [ ExtResource( 6 ), ExtResource( 7 ) ]

[node name="Timer" type="Timer" parent="PlanetSpawner"]
wait_time = 60.0

[node name="StarSpawner" type="Node2D" parent="."]
position = Vector2( 225, 0 )
script = ExtResource( 2 )
star = ExtResource( 3 )

[node name="Timer" type="Timer" parent="StarSpawner"]
wait_time = 0.05
autostart = true

[node name="Spaceship" parent="." instance=ExtResource( 8 )]
position = Vector2( 212, 592 )

[node name="UI" type="Node2D" parent="."]
z_index = 150

[node name="Score" type="Label" parent="UI"]
margin_left = 5.0
margin_top = 4.0
margin_right = 445.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="AsteroidSpawner/Timer" to="AsteroidSpawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="PlanetSpawner/Timer" to="PlanetSpawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="StarSpawner/Timer" to="StarSpawner" method="_on_Timer_timeout"]
